@@ -20,6 +20,7 @@ use Dist::Zilla::PluginBundle::Git 1.110500 ();
 use Dist::Zilla::PluginBundle::TestingMania 0.014 ();
 use Dist::Zilla::Plugin::Authority 1.005 (); # accepts any non-whitespace + locate_comment
 use Dist::Zilla::Plugin::Bugtracker ();
+use Dist::Zilla::Plugin::CopyReadmeFromBuild 0.0019 ();
 use Dist::Zilla::Plugin::CheckExtraTests ();
 use Dist::Zilla::Plugin::CheckChangesHasContent 0.003 ();
 use Dist::Zilla::Plugin::DualBuilders 1.001 (); # only runs tests once
@@ -35,6 +36,8 @@ use Dist::Zilla::Plugin::PkgVersion ();
 #use Dist::Zilla::Plugin::OurPkgVersion 0.002 ();
 use Dist::Zilla::Plugin::PodWeaver ();
 use Dist::Zilla::Plugin::Prepender 1.112280 ();
+use Pod::Markdown 1.110731 (); # verbatim indentation fix [rt-72414]
+use Dist::Zilla::Plugin::ReadmeMarkdownFromPod 0.103510 ();
 use Dist::Zilla::Plugin::Repository 0.16 (); # deprecates github_http
 use Dist::Zilla::Plugin::ReportVersions::Tiny 1.01 ();
 use Dist::Zilla::Plugin::TaskWeaver 0.101620 ();
@@ -160,8 +163,6 @@ sub configure {
       PruneCruft
       ManifestSkip
     ),
-    # this is just for github
-    [ PruneFiles => 'PruneRepoMetaFiles' => { match => '^(README.pod)$' } ],
     # Devel::Cover db does not need to be packaged with distribution
     [ PruneFiles => 'PruneDevelCoverDatabase' => { match => '^(cover_db/.+)' } ],
     # Code::Stat report
@@ -198,7 +199,8 @@ sub configure {
   # generated distribution files
     qw(
       License
-      Readme
+      ReadmeMarkdownFromPod
+      CopyReadmeFromBuild
     ),
     # @APOCALYPTIC: generate MANIFEST.SKIP ?
 
